components/SiteTopBar/styles.scss
@import "~@/assets/scss/variables.scss";
.zerotohero-electron {
  .site-top-bar {
    padding-top: 1.5rem; // For electron
  }
}

.flag-icon {
  position: relative;
  bottom: 0.1rem;
}

.site-top-bar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  line-height: 2.3;
  padding: calc(env(safe-area-inset-top) + 0.25rem) 0.75rem 0.25rem 0.75rem;
  color: #777;
  font-size: 0.875rem;
  .btn,
  a {
    line-height: 2.3rem;
  }
  &.site-top-bar-light {
    background-color: white;
    .btn,
    a {
      color: #000000aa;
      &:hover {
        color: $bg-color-dark-1;
      }
    }
  }
  &.site-top-bar-dark {
    background-color: $bg-color-dark-1;
    .btn,
    a {
      color: #ffffffaa;
      &:hover {
        color: white;
      }
    }
  }
  .btn {
    margin: 0 0 0 0.3rem;
    padding: 0;
  }

  &.site-top-bar-menu-bar {
    width: 100vw;
    position: sticky;
    top: 0;
    z-index: 99;
  }

  .language-flag-and-name {
    line-height: 1;
    text-overflow: ellipsis;
    white-space: nowrap;
    display: inline-block;
    position: relative;
    text-align: left;
  }
}

.zerotohero-wide {
  .site-top-bar {
    left: 13rem;
  }
  &.zerotohero-wide-collapsed {
    .site-top-bar {
      left: 5rem;
      width: calc(100% - 5rem);
    }
  }
  &:not(.zerotohero-with-nav) {
    .site-top-bar {
      left: 0;
      width: 100%;
    }
  }
}

.logo {
  height: 1.3rem;
  border-radius: 100%;
  &.logo-absolute-centered {
    position: absolute;
    left: calc(50% - 4.5rem);
    top: calc(0.25rem + env(safe-area-inset-top));
  }
  span {
    font-size: 0.9rem !important;
  }
}

.site-top-bar-language-flag {
  transform: scale(0.7);
  margin-right: -0.5rem;
  margin-bottom: -0.3rem;
}

.language-flag-triangle {
  position: relative;
  bottom: 0.2rem;
  opacity: 0.7
}

